--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,45 @@
     transform: rotate(360deg);
   }
 }
+
+.navbar{
+  display: flex;
+  height: 50px;
+}
+
+.navbar ::after {
+  width:100%;
+  height:10px;
+  position:absolute;
+  bottom:0;
+  left:0;
+  background:#337AB7;
+  border-radius:5px;
+}
+
+.navelement{
+  padding: 5px;
+}
+
+.intro{
+  display: flex;
+  flex-direction: horizontal;
+}
+
+.website-pic{
+  width: 300px;
+  height: 150px;
+  padding-right: 10%;
+  margin-top: 20px;
+}
+
+.description{
+  max-width: 50%;
+}
+
+.body-component{
+  display: flex;
+  flex-direction: horizontal;
+  padding-left: 10%;
+  padding-right: 10%;
+}
