--- a/src/App.css
+++ b/src/App.css
@@ -78,3 +78,10 @@
   padding-left: 10%;
   padding-right: 10%;
 }
+
+.Buttons{
+  display: flex;
+  flex-direction: column;
+  position: 200px, 200px;
+
+}
